--- a/index.html
+++ b/index.html
@@ -1,184 +1,45 @@
+<!-- REPOSITORIO WEB ALL IN ONE -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <title>TP Bootstrap</title>
+    <link rel="stylesheet" href="/Styles/RepoWebAIO/Style.css">
+    <title>Repo web All In One</title>
 </head>
 <body>
-  <header>
-    <nav class="navbar navbar-expand-md bg-dark">
-        <div class="container-fluid d-flex justify-content-xl-start justify-content-center">
-            <a class="nav-link" href="#"><img src="/Images/codoacodoLogo.png" width="140"></a>
-            <a class="nav-link text-light" style="font-size: 3vh;">Conf. Buenos Aires</a>
-        </div>
-        <div class="container-fluid d-flex justify-content-xl-end justify-content-center">
-            <ul class="navbar-nav  justify-content-end  text-center" style="font-size: 2vh;">
-                <li class="nav-item ">
-                    <a class="nav-link text-light" href="#la_conferencia">La conferencia</a>    
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#oradores">Oradores</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#lugar_y_fecha">El lugar y la fecha</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="#conviertete_en_orador">Conviertete en Orador</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-success" href="#comprar_tickets">Comprar tickets</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <header>
+        <nav>
+            <div class="buscador">
+                <div class="cabeceraTitulo">
+                    <h1>Repo Web All In One</h1>
+                </div>
+                <form action="">
+                    <button>
+                        <img src="/Icons/Icon-Search.svg">
+                    </button>
+                    <!-- BUSCADOR -->
+                </form>
+            </div>
+        </nav>
     </header>
-    <section id="la_conferencia">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <section>
+        <!-- PROYECTOS - LINKS USTILES - TUTORIALES Y CURSOS - CHEATSHEETS - LATERAL TASKBAR - BARRA INFERIOR  -->
+        <div class="contenedorSecciones">
+            <div class="secciones">
+                <div class="card"><a href="/Websites/index_bootstrap_integrador.html"> Bootstraap Integrador</a></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/Images/ba1.jpg" class="d-block w-100">
-                <div class="carousel-caption">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/Images/ba2.jpg" class="d-block w-100">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/Images/ba3.jpg" class="d-block w-100">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-    </section>
-    <section id="oradores">
-      <div class="text-center pt-3">
-        <h5>CONOCE A LOS</h5>
-        <h2>ORADORES</h2>
-      </div>
-        <div class="container-fluid">
-        <div class="row row-cols-auto justify-content-center">
-          <div class="col mt-2 mb-2">
-            <div class="card" style="width: 18rem;">
-              <img src="/Images/steve1.jpg" class="card-img-top">
-              <div class="card-body">
-                <a href="#" class="btn btn-warning btn-sm" style="border-radius: 20px;">Go somewhere</a>
-                <a href="#" class="btn btn-primary btn-sm" style="border-radius: 20px;">Go somewhere</a>
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at tristique ex, ut mattis elit. Nullam a scelerisque libero, et maximus ligula.</p>
-              </div>
-            </div>
+            <div class="lateralTaskbar"></div>
+            <div class="ultimoAcceso"></div>
         </div>
-        <div class="col mt-2 mb-2">
-          <div class="card" style="width: 18rem;">
-            <img src="/Images/bill.jpg" class="card-img-top">
-            <div class="card-body">
-                <a href="#" class="btn btn-warning btn-sm" style="border-radius: 20px;">Go somewhere</a>
-                <a href="#" class="btn btn-primary btn-sm" style="border-radius: 20px;">Go somewhere</a>
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at tristique ex, ut mattis elit. Nullam a scelerisque libero, et maximus ligula.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col mt-2 mb-2">
-          <div class="card" style="width: 18rem;">
-            <img src="/Images/ada.jpeg" class="card-img-top">
-            <div class="card-body">
-                <a href="#" class="btn btn-secondary btn-sm" style="border-radius: 20px;">Go somewhere</a>
-                <a href="#" class="btn btn-danger btn-sm" style="border-radius: 20px;">Go somewhere</a>
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at tristique ex, ut mattis elit. Nullam a scelerisque libero, et maximus ligula.</p>
-            </div>
-          </div> 
-        </div>
-        </div>
-      </div>
-    </section>
-    <section id="lugar_y_fecha">
-      <div class="container-fluid bg-dark py-3">
-        <div class="row row-cols-1 row-cols-lg-2">
-          <div class="col">
-            <img src="/Images/honolulu.jpg" width="100%">
-          </div>
-          <div class="col text-light">
-            <h3>BS AS - Octubre</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at tristique ex, ut mattis elit. Nullam a scelerisque libero, et maximus ligula.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at tristique ex, ut mattis elit. Nullam a scelerisque libero, et maximus ligula.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at tristique ex, ut mattis elit. Nullam a scelerisque libero, et maximus ligula.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at tristique ex, ut mattis elit. Nullam a scelerisque libero, et maximus ligula.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at tristique ex, ut mattis elit. Nullam a scelerisque libero, et maximus ligula.</p>
-            <button type="button" class="btn btn-outline-light">Conocé más</button>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="conviertete_en_orador">
-      <div class="text-center pt-3 container">
-        <h5>CONVIÉRTETE EN UN</h5>
-        <h2>ORADOR</h2>
-        <p>Anotate como orador para dar una <a href="#" class="text-dark">charla ignite</a>. Cuentanos de que quieres hablar!</p>
         
-      </div>
-      <div class="form-group container">
-        <div class="mb-3 col-md-8 col-8 offset-2 d-flex gap-4">
-            <input type="text" class="form-control" placeholder="Nombre">
-            <input type="text" class="form-control" placeholder="Apellido">
-        </div>
-      <div class="mb-3 col-md-8  col-8 offset-2">
-        <textarea id="TemaTextArea" class="form-control" rows="5" placeholder="¿Sobre qué quieres hablar?"></textarea>
-        <label for="TemaTextArea">Recuerda incluir un texto para tu charla</label>
-    </div>
-    <button type="button" class="btn btn-success col-md-8 offset-md-2 col-8 offset-2 mb-3">Enviar</button>
     </section>
     <footer>
-      <nav class="navbar navbar-expand-md" style="background: linear-gradient(90deg, #001530,#003f5d);">
-        <div class="container-fluid justify-content-center">
-            <ul class="navbar-nav text-center" style="font-size: 2vh;">
-                <li class="nav-item  mx-xl-4 mx-lg-3">
-                    <a class="nav-link text-light" href="#la_conferencia">Preguntas frecuentes</a>    
-                </li>
-                <li class="nav-item mx-xl-4 mx-lg-3">
-                    <a class="nav-link text-light" href="#oradores">Contáctanos</a>
-                </li>
-                <li class="nav-item mx-xl-4 mx-lg-3">
-                    <a class="nav-link text-light" href="#lugar_y_fecha">Prensa</a>
-                </li>
-                <li class="nav-item mx-xl-4 mx-lg-3">
-                    <a class="nav-link text-light" href="#conviertete_en_orador">Conferencias</a>
-                </li>
-                <li class="nav-item mx-xl-4 mx-lg-3">
-                    <a class="nav-link text-light" href="#comprar_tickets">Terminos y Condiciones</a>
-                </li>
-                <li class="nav-item mx-xl-4 mx-lg-3">
-                  <a class="nav-link text-light" href="#comprar_tickets">Privacidad</a>
-                </li>
-                <li class="nav-item mx-xl-4 mx-lg-3">
-                  <a class="nav-link text-light" href="#comprar_tickets">Estudiantes</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        <!-- IMAGINO QUE ALUNOS DATOS BREVES MIOS COMO PARA PONER ALGO  -->
     </footer>
 </body>
 </html>
