--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <p>Anotate como orador para dar una <a href="#" class="text-dark">charla ignite</a>. Cuentanos de que quieres hablar!</p>
         
       </div>
-      <div class="form-group container">
+      <form class="form-group container">
         <div class="mb-3 col-md-8 col-8 offset-2 d-flex gap-4">
             <input type="text" class="form-control" placeholder="Nombre">
             <input type="text" class="form-control" placeholder="Apellido">
@@ -163,8 +163,9 @@
         <textarea id="TemaTextArea" class="form-control" rows="5" placeholder="¿Sobre qué quieres hablar?"></textarea>
         <label for="TemaTextArea">Recuerda incluir un texto para tu charla</label>
     </div>
-    <button type="button" class="btn btn-success col-md-8 offset-md-2 col-8 offset-2 mb-3">Enviar</button>
-    </section>
+    <button type="submit" class="btn btn-success col-md-8 offset-md-2 col-8 offset-2 mb-3">Enviar</button>
+      </form>  
+  </section>
     <footer>
       <nav class="navbar navbar-expand-md" style="background: linear-gradient(90deg, #001530,#003f5d);">
         <div class="container-fluid justify-content-center">
