--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--PRELOADER-->
+    <link rel="stylesheet" href="/Styles/RepoWebAIO/PreLoader.css">
+
+    <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
     <title>TP Bootstrap</title>
 </head>
 <body>
+  <div id="page" style="display: none;">
   <header class="sticky-top">
     <nav class="navbar navbar-expand-md bg-dark navbar-light">
       <div class="container-fluid d-flex justify-content-md-start justify-content-sm-arround">
-        <a class="nav-link p-0" href="#"><img src="/Images/codoacodoLogo.png" width="140px"></a>
+        <a class="nav-link p-0" href="#"><img src="../Parctica Integradora Bootstrap/Images/codoacodoLogo.webp" width="140px"></a>
         <p class="nav-link text-light p-0" style="font-size: calc(2vw + 1vh) ;">Conf. Buenos Aires</p>
         <div class="dropstart d-sm-flex d-md-none">
           <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -32,7 +38,7 @@
               <a class="dropdown-item" href="#conviertete_en_orador">Conviertete en Orador</a>
             </li>
             <li class="nav-item">
-              <a class="dropdown-item" href="#comprar_tickets">Comprar tickets</a>
+              <a class="dropdown-item" href="../Parctica Integradora Bootstrap/Tickets.html">Comprar tickets</a>
             </li>
           </ul>                      
         </div>
@@ -53,7 +59,7 @@
             <a class="nav-link text-light" href="#conviertete_en_orador">Conviertete en Orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="#comprar_tickets">Comprar tickets</a>
+            <a class="nav-link text-success" href="../Parctica Integradora Bootstrap/Tickets.html">Comprar tickets</a>
           </li>
         </ul>
       </div>
@@ -69,13 +75,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/Images/ba1.jpg" class="d-block w-100">
+                <img src="../Parctica Integradora Bootstrap/Images/ba1.webp" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="/Images/ba2.jpg" class="d-block w-100">
+                <img src="../Parctica Integradora Bootstrap/Images/ba2.webp" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="/Images/ba3.jpg" class="d-block w-100">
+                <img src="../Parctica Integradora Bootstrap/Images/ba3.webp" class="d-block w-100">
               </div>
             </div>
             <div class="container-fluid w-100 h-100 position-absolute top-0 start-0" style="background: rgb(0,0,0,0.6);">
@@ -84,7 +90,7 @@
                   <h2>Conf BsAS</h2>
                   <p>Conf BsAs llega por primera vez a la Argentina. Un evento para conpartir con nuestra comunidad el conocimiento y la experiencia de los expertos que estan creando el futuro de la Internet. Van a conocer a miembros del evento, a otros estudiantes de Codo a Codo y a oradores de primer nivel que tenemos para ti. Te esperamos!</p>
                   <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-                  <button type="button" class="btn btn-success">Comprar tickets</button>
+                  <button type="button" class="btn btn-success"><a class="text-decoration-none text-light" href="../Parctica Integradora Bootstrap/Tickets.html">Comprar tickets</a></button>
                 </div>
               </div>
             </div>
@@ -99,7 +105,7 @@
         <div class="row row-cols-auto justify-content-center">
           <div class="col mt-2 mb-2">
             <div class="card" style="width: 18rem;">
-              <img src="/Images/steve1.jpg" class="card-img-top">
+              <img src="../Parctica Integradora Bootstrap/Images/steve1.webp" class="card-img-top">
               <div class="card-body">
                 <a href="#" class="btn btn-warning btn-sm" style="border-radius: 20px;">Go somewhere</a>
                 <a href="#" class="btn btn-primary btn-sm" style="border-radius: 20px;">Go somewhere</a>
@@ -110,7 +116,7 @@
         </div>
         <div class="col mt-2 mb-2">
           <div class="card" style="width: 18rem;">
-            <img src="/Images/bill.jpg" class="card-img-top">
+            <img src="../Parctica Integradora Bootstrap/Images/bill.webp" class="card-img-top">
             <div class="card-body">
                 <a href="#" class="btn btn-warning btn-sm" style="border-radius: 20px;">Go somewhere</a>
                 <a href="#" class="btn btn-primary btn-sm" style="border-radius: 20px;">Go somewhere</a>
@@ -121,7 +127,7 @@
         </div>
         <div class="col mt-2 mb-2">
           <div class="card" style="width: 18rem;">
-            <img src="/Images/ada.jpeg" class="card-img-top">
+            <img src="../Parctica Integradora Bootstrap/Images/ada.webp" class="card-img-top">
             <div class="card-body">
                 <a href="#" class="btn btn-secondary btn-sm" style="border-radius: 20px;">Go somewhere</a>
                 <a href="#" class="btn btn-danger btn-sm" style="border-radius: 20px;">Go somewhere</a>
@@ -137,7 +143,7 @@
       <div class="container-fluid bg-dark py-3">
         <div class="row row-cols-1 row-cols-lg-2">
           <div class="col">
-            <img src="/Images/honolulu.jpg" width="100%">
+            <img src="../Parctica Integradora Bootstrap/Images/honolulu.webp" width="100%">
           </div>
           <div class="col text-light">
             <h3>BS AS - Octubre</h3>
@@ -195,5 +201,15 @@
         </div>
     </nav>
     </footer>
+  </div>
+
+  <!--PRELOADER-->
+  <div id="preloader">
+    <div id="footerPreloader">
+      <p>© 2022 Diseñado con cariño por Moreno, Uriel ;) </p>
+    </div>
+  </div>
+  <!--/PRELOADER-->
 </body>
+<script src="../../Js/PreLoader.js"></script>
 </html>
