--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--PRELOADER-->
-    <link rel="stylesheet" href="/Styles/RepoWebAIO/PreLoader.css">
+    <!--<link rel="stylesheet" href="/Styles/RepoWebAIO/PreLoader.css">-->
 
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -14,7 +14,7 @@
     <title>TP Bootstrap</title>
 </head>
 <body>
-  <div id="page" style="display: none;">
+  <div id="page" style="">
   <header class="sticky-top">
     <nav class="navbar navbar-expand-md bg-dark navbar-light">
       <div class="container-fluid d-flex justify-content-md-start justify-content-sm-arround">
@@ -203,12 +203,12 @@
     </footer>
   </div>
 
-  <!--PRELOADER-->
+  <!--PRELOADER
   <div id="preloader">
     <div id="footerPreloader">
       <p>© 2022 Diseñado con cariño por Moreno, Uriel ;) </p>
     </div>
-  </div>
+  </div>-->
   <!--/PRELOADER-->
 </body>
 <script src="../../Js/PreLoader.js"></script>
