--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-expand-md bg-dark navbar-light">
       <div class="container-fluid d-flex justify-content-md-start justify-content-sm-arround">
-        <a class="nav-link p-0" href="#"><img src="../Parctica Integradora Bootstrap/Images/codoacodoLogo.webp" width="140px"></a>
+        <a class="nav-link p-0" href="#"><img src="../Images/codoacodoLogo.webp" width="140px"></a>
         <p class="nav-link text-light p-0" style="font-size: calc(2vw + 1vh) ;">Conf. Buenos Aires</p>
         <div class="dropstart d-sm-flex d-md-none">
           <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,7 +38,7 @@
               <a class="dropdown-item" href="#conviertete_en_orador">Conviertete en Orador</a>
             </li>
             <li class="nav-item">
-              <a class="dropdown-item" href="../Parctica Integradora Bootstrap/Tickets.html">Comprar tickets</a>
+              <a class="dropdown-item" href="../Tickets.html">Comprar tickets</a>
             </li>
           </ul>                      
         </div>
@@ -59,7 +59,7 @@
             <a class="nav-link text-light" href="#conviertete_en_orador">Conviertete en Orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="../Parctica Integradora Bootstrap/Tickets.html">Comprar tickets</a>
+            <a class="nav-link text-success" href="../Tickets.html">Comprar tickets</a>
           </li>
         </ul>
       </div>
@@ -75,13 +75,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../Parctica Integradora Bootstrap/Images/ba1.webp" class="d-block w-100">
+                <img src="../Images/ba1.webp" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="../Parctica Integradora Bootstrap/Images/ba2.webp" class="d-block w-100">
+                <img src="../Images/ba2.webp" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="../Parctica Integradora Bootstrap/Images/ba3.webp" class="d-block w-100">
+                <img src="../Images/ba3.webp" class="d-block w-100">
               </div>
             </div>
             <div class="container-fluid w-100 h-100 position-absolute top-0 start-0" style="background: rgb(0,0,0,0.6);">
@@ -90,7 +90,7 @@
                   <h2>Conf BsAS</h2>
                   <p>Conf BsAs llega por primera vez a la Argentina. Un evento para conpartir con nuestra comunidad el conocimiento y la experiencia de los expertos que estan creando el futuro de la Internet. Van a conocer a miembros del evento, a otros estudiantes de Codo a Codo y a oradores de primer nivel que tenemos para ti. Te esperamos!</p>
                   <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
-                  <button type="button" class="btn btn-success"><a class="text-decoration-none text-light" href="../Parctica Integradora Bootstrap/Tickets.html">Comprar tickets</a></button>
+                  <button type="button" class="btn btn-success"><a class="text-decoration-none text-light" href="../Tickets.html">Comprar tickets</a></button>
                 </div>
               </div>
             </div>
@@ -116,7 +116,7 @@
         </div>
         <div class="col mt-2 mb-2">
           <div class="card" style="width: 18rem;">
-            <img src="../Parctica Integradora Bootstrap/Images/bill.webp" class="card-img-top">
+            <img src="../Images/bill.webp" class="card-img-top">
             <div class="card-body">
                 <a href="#" class="btn btn-warning btn-sm" style="border-radius: 20px;">Go somewhere</a>
                 <a href="#" class="btn btn-primary btn-sm" style="border-radius: 20px;">Go somewhere</a>
@@ -127,7 +127,7 @@
         </div>
         <div class="col mt-2 mb-2">
           <div class="card" style="width: 18rem;">
-            <img src="../Parctica Integradora Bootstrap/Images/ada.webp" class="card-img-top">
+            <img src="../Images/ada.webp" class="card-img-top">
             <div class="card-body">
                 <a href="#" class="btn btn-secondary btn-sm" style="border-radius: 20px;">Go somewhere</a>
                 <a href="#" class="btn btn-danger btn-sm" style="border-radius: 20px;">Go somewhere</a>
@@ -143,7 +143,7 @@
       <div class="container-fluid bg-dark py-3">
         <div class="row row-cols-1 row-cols-lg-2">
           <div class="col">
-            <img src="../Parctica Integradora Bootstrap/Images/honolulu.webp" width="100%">
+            <img src="../Images/honolulu.webp" width="100%">
           </div>
           <div class="col text-light">
             <h3>BS AS - Octubre</h3>
@@ -211,5 +211,5 @@
   </div>-->
   <!--/PRELOADER-->
 </body>
-<script src="../../Js/PreLoader.js"></script>
+<!--<script src="../../Js/PreLoader.js"></script>-->
 </html>
