--- a/Tickets.html
+++ b/Tickets.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--PRELOADER-->
-    <link rel="stylesheet" href="/Styles/RepoWebAIO/PreLoader.css">
 
     <!--BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,14 +12,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <title>Comrar Tickets</title>
+    <title>Comprar Tickets</title>
 </head>
 
 <body>
     <header class="sticky-top">
         <nav class="navbar navbar-expand-md bg-dark navbar-light">
             <div class="container-fluid d-flex justify-content-md-start justify-content-sm-arround">
-                <a class="nav-link p-0" href="#"><img src="../Parctica Integradora Bootstrap/Images/codoacodoLogo.webp"
+                <a class="nav-link p-0" href="#"><img src="../Images/codoacodoLogo.webp"
                         width="140px"></a>
                 <p class="nav-link text-light p-0" style="font-size: calc(2vw + 1vh) ;">Conf. Buenos Aires</p>
                 <div class="dropstart d-sm-flex d-md-none">
@@ -43,7 +41,7 @@
                             <a class="dropdown-item" href="#conviertete_en_orador">Conviertete en Orador</a>
                         </li>
                         <li class="nav-item">
-                            <a class="dropdown-item" href="../Parctica Integradora Bootstrap/Tickets.html">Comprar
+                            <a class="dropdown-item" href="../Tickets.html">Comprar
                                 tickets</a>
                         </li>
                     </ul>
@@ -65,7 +63,7 @@
                         <a class="nav-link text-light" href="#conviertete_en_orador">Conviertete en Orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success" href="../Parctica Integradora Bootstrap/Tickets.html">Comprar
+                        <a class="nav-link text-success" href="../Tickets.html">Comprar
                             tickets</a>
                     </li>
                 </ul>
@@ -187,6 +185,6 @@
           </nav>
           </footer>
 </body>
-<script src="../Parctica Integradora Bootstrap/Javascript/CalculoTotalTickets.js"></script>
+<script src="../Javascript/CalculoTotalTickets.js"></script>
 
 </html>
