--- a/Tickets.html
+++ b/Tickets.html
@@ -150,7 +150,7 @@
                         <button type="submit" class="btn btn-success col-12">Borrar</button>
                     </div>
                     <div class="col-4">
-                        <button type="button" class="btn btn-success col-12" onclick="validaCampos()">Resumen</button>
+                        <button id="btnForm" type="none" class="btn btn-success col-12" onclick="validaCampos()">Resumen</button>
                     </div>
                 </div>
             </form>
